--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex,nofollow" />
-    <title>CV - Aaro Karell</title>
+    <title>Aaro Karell</title>
   </head>
   <body
     class="min-h-screen flex flex-col justify-center items-center bg-zinc-800 text-white"
@@ -38,7 +38,7 @@
         <section>
           <span class="text-lg font-bold">Skills &amp; experience</span>
           <ul class="list-disc list-inside">
-            <li>I'm self-taught, no college degree</li>
+            <li>I'm fully self-taught, no college degree</li>
             <li>I'm fluent in English</li>
             <li>I've worked as an intern at <a href="https://www.intera.fi">Intera</a></li>
             <li>There, I helped build a full-stack app utilizing
@@ -47,12 +47,15 @@
                 <li>ASP.NET Core <span class="text-gray-300">[C#]</span></li>
                 <li>Android <span class="text-gray-300">[Kotlin]</span></li>
                 <li>PostgreSQL</li>
+                <li>Docker</li>
                 <li>MQTT</li>
               </ul>
             </li>
           </ul>
         </section>
-        <span class="font-bold">See my <a href="https://github.com/ajkarell">GitHub</a> for more</span>
+        <hr class="mt-2 mb-1"/>
+        <span class="block italic">This site is built and hosted by me.</span>
+        <span class="italic">See my <a href="https://github.com/ajkarell">GitHub</a> for more.</span>
       </div>
     </main>
     <footer class="py-1"><a href="https://github.com/ajkarell/cv-www">&copy; 2023 Aaro Karell</a></footer>
